--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demos</title>
+  <title>Blockly演示</title>
   <style>
     body {
       margin: 0 10%;
@@ -24,8 +24,8 @@
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt; Demos</h1>
 
-  <p>These demos are intended for developers who want to integrate Blockly with
-  their own applications.</p>
+  <p>这些演示旨在谁想要便是Blockly整合与开发人员
+  自己的应用.</p>
 
   <table>
     <tr>
@@ -35,8 +35,8 @@
         </a>
       </td>
       <td>
-        <div><a href="fixed/index.html">Fixed Blockly</a></div>
-        <div>Inject Blockly into a page as a fixed element.</div>
+        <div><a href="fixed/index.html">固定Blockly</a></div>
+        <div>注射Blockly到页面中作为固定元素.</div>
       </td>
     </tr>
 
@@ -47,8 +47,8 @@
         </a>
       </td>
       <td>
-        <div><a href="resizable/index.html">Resizable Blockly</a></div>
-        <div>Inject Blockly into a page as a resizable element.</div>
+        <div><a href="resizable/index.html">可调整大小Blockly</a></div>
+        <div>注射Blockly到页作为一个可调整大小的元素.</div>
       </td>
     </tr>
 
@@ -59,8 +59,8 @@
         </a>
       </td>
       <td>
-        <div><a href="toolbox/index.html">Defining the Toolbox</a></div>
-        <div>Organize blocks into categories for the user.</div>
+        <div><a href="toolbox/index.html">定义工具箱</a></div>
+        <div>组织块进行分类，为用户.</div>
       </td>
     </tr>
 
@@ -71,8 +71,8 @@
         </a>
       </td>
       <td>
-        <div><a href="maxBlocks/index.html">Maximum Block Limit</a></div>
-        <div>Limit the total number of blocks allowed (for academic exercises).</div>
+        <div><a href="maxBlocks/index.html">最大块限制</a></div>
+        <div>限制允许块的总数（学术练习）.</div>
       </td>
     </tr>
 
@@ -83,8 +83,8 @@
         </a>
       </td>
       <td>
-        <div><a href="generator/index.html">Generate JavaScript</a></div>
-        <div>Turn blocks into code and execute it.</div>
+        <div><a href="generator/index.html">生成JavaScript</a></div>
+        <div>打开块转换成代码并执行.</div>
       </td>
     </tr>
 
@@ -96,7 +96,7 @@
       </td>
       <td>
         <div><a href="headless/index.html">Headless</a></div>
-        <div>Generate code from XML without graphics.</div>
+        <div>不生成图形的XML代码.</div>
       </td>
     </tr>
 
@@ -108,7 +108,7 @@
       </td>
       <td>
         <div><a href="interpreter/index.html">JS Interpreter</a></div>
-        <div>Step by step execution in JavaScript.</div>
+        <div>通过在JavaScript中单步执行.</div>
       </td>
     </tr>
 
