--- a/demos/index.html
+++ b/demos/index.html
@@ -120,7 +120,7 @@
       </td>
       <td>
         <div><a href="graph/index.html">Graph</a></div>
-        <div>Instant updates when blocks are changed.</div>
+        <div>当块改变即时更新.</div>
       </td>
     </tr>
 
@@ -132,7 +132,7 @@
       </td>
       <td>
         <div><a href="rtl/index.html">RTL</a></div>
-        <div>See what Blockly looks like in right-to-left mode (for Arabic and Hebrew).</div>
+        <div>看看Blockly看起来从右到左的模式（阿拉伯语和希伯来语）.</div>
       </td>
     </tr>
 
@@ -144,7 +144,7 @@
       </td>
       <td>
         <div><a href="storage/index.html">Cloud Storage</a></div>
-        <div>Save and load blocks with App Engine.</div>
+        <div>保存并使用App Engine加载块.</div>
       </td>
     </tr>
 
@@ -156,7 +156,7 @@
       </td>
       <td>
         <div><a href="mirror/index.html">Mirrored Blockly</a></div>
-        <div>Two Blockly instances connected as master-slave.</div>
+        <div>连接主从两个Blockly实例.</div>
       </td>
     </tr>
 
@@ -168,7 +168,7 @@
       </td>
       <td>
         <div><a href="accessible/index.html">Accessible Blockly</a></div>
-        <div>Version of Blockly accessible to screen readers.</div>
+        <div>Blockly版本屏幕读取器访问.</div>
       </td>
     </tr>
 
@@ -180,7 +180,7 @@
       </td>
       <td>
         <div><a href="plane/index.html">Plane</a></div>
-        <div>Using Closure Templates to support 35 languages.</div>
+        <div>使用Closure模板，支持35种语言.</div>
       </td>
     </tr>
 
@@ -192,7 +192,7 @@
       </td>
       <td>
         <div><a href="code/index.html">Code Editor</a></div>
-        <div>Export a Blockly program into JavaScript, Python, PHP, Lua, Dart, or XML.</div>
+        <div>导出Blockly程序为JavaScript，Python和PHP，Lua中，飞镖，或XML。</div>
       </td>
     </tr>
 
@@ -204,7 +204,7 @@
       </td>
       <td>
         <div><a href="blockfactory/index.html">Block Factory</a></div>
-        <div>Build custom blocks using Blockly.</div>
+        <div>构建使用Blockly定制模块。</div>
       </td>
     </tr>
   </table>
