--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -6,7 +6,8 @@
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+ <!-- <script src="../../msg/js/en.js"></script>-->
+    <script src="https://2947721120.github.io/blockly/demos/plane/plane.jss"></script>
   <style>
     body {
       background-color: #fff;
