--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Generating JavaScript</title>
+  <title>blockly JavaScript生成演示：</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../javascript_compressed.js"></script>
@@ -28,9 +28,9 @@
     </tr>
   </table>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Generating JavaScript</h1>
+    <a href="../index.html">Demos</a> &gt; 生成的JavaScript</h1>
 
-  <p>This is a simple demo of generating code from blocks.</p>
+  <p>这是一个简单的演示代码从块生成.</p>
 
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/code-generators">Code Generators</a>&hellip;</p>
 
