--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -42,14 +42,14 @@
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
   <xml id="toolbox" style="display: none">
-    <category name="Logic">
+    <category name="逻辑">
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
       <block type="logic_negate"></block>
       <block type="logic_boolean"></block>
     </category>
-    <category name="Loops">
+    <category name="循环">
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <block type="math_number">
@@ -59,12 +59,12 @@
       </block>
       <block type="controls_whileUntil"></block>
     </category>
-    <category name="Math">
+    <category name="数学">
       <block type="math_number"></block>
       <block type="math_arithmetic"></block>
       <block type="math_single"></block>
     </category>
-    <category name="Text">
+    <category name="文本">
       <block type="text"></block>
       <block type="text_length"></block>
       <block type="text_print"></block>
