--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -32,7 +32,7 @@
 
   <p>这是一个简单的演示代码从块生成.</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/code-generators">Code Generators</a>&hellip;</p>
+  <p>&rarr; 有关更多信息 <a href="https://developers.google.com/blockly/installation/code-generators">代码生成器</a>&hellip;</p>
 
   <p>
     <button onclick="showCode()">Show JavaScript</button>
