--- a/demos/generator/index.html
+++ b/demos/generator/index.html
@@ -35,8 +35,8 @@
   <p>&rarr; 有关更多信息 <a href="https://developers.google.com/blockly/installation/code-generators">代码生成器</a>&hellip;</p>
 
   <p>
-    <button onclick="showCode()">Show JavaScript</button>
-    <button onclick="runCode()">Run JavaScript</button>
+    <button onclick="showCode()">显示 JavaScript</button>
+    <button onclick="runCode()">运行 JavaScript</button>
   </p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
