--- a/demos/toolbox/index.html
+++ b/demos/toolbox/index.html
@@ -5,7 +5,7 @@
   <title>Blockly Demo: Toolbox</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+<script src="https://2947721120.github.io/blockly/msg/js/zh-hans.js"></script>
   <style>
     body {
       background-color: #fff;
