--- a/demos/toolbox/index.html
+++ b/demos/toolbox/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Toolbox</title>
+  <title>Blockly演示：工具箱</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
 <script src="https://2947721120.github.io/blockly/msg/js/zh-hans.js"></script>
@@ -21,7 +21,7 @@
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
     <a href="../index.html">Demos</a> &gt; Toolbox</h1>
 
-  <p>This is a demo of a complex category structure for the toolbox.</p>
+  <p>这是一个复杂的品类结构的对工具箱的演示.</p>
 
   <p>&rarr; More info on the <a href="https://developers.google.com/blockly/installation/toolbox">Toolbox</a>&hellip;</p>
 
@@ -271,28 +271,28 @@
         <block type="text_print">
           <value name="TEXT">
             <block type="text">
-              <field name="TEXT">'Twas brillig, and the slithy toves</field>
+              <field name="TEXT">'特瓦Brillig和和slithy toves</field>
             </block>
           </value>
           <next>
             <block type="text_print">
               <value name="TEXT">
                 <block type="text">
-                  <field name="TEXT">  Did gyre and gimble in the wabe:</field>
+                  <field name="TEXT">  难道环流和万向接头的WABE:</field>
                 </block>
               </value>
               <next>
                 <block type="text_print">
                   <value name="TEXT">
                     <block type="text">
-                      <field name="TEXT">All mimsy were the borogroves,</field>
+                      <field name="TEXT">所有mimsy是在borogoves,</field>
                     </block>
                   </value>
                   <next>
                     <block type="text_print">
                       <value name="TEXT">
                         <block type="text">
-                          <field name="TEXT">  And the mome raths outgrabe.</field>
+                          <field name="TEXT">  而MOME拉斯outgrabe.</field>
                         </block>
                       </value>
                     </block>
@@ -305,28 +305,28 @@
         <block type="text_print">
           <value name="TEXT">
             <block type="text">
-              <field name="TEXT">"Beware the Jabberwock, my son!</field>
+              <field name="TEXT">"警告和举例，我的儿子!</field>
             </block>
           </value>
           <next>
             <block type="text_print">
               <value name="TEXT">
                 <block type="text">
-                  <field name="TEXT">  The jaws that bite, the claws that catch!</field>
+                  <field name="TEXT"> 该咬颌，即赶上爪!</field>
                 </block>
               </value>
               <next>
                 <block type="text_print">
                   <value name="TEXT">
                     <block type="text">
-                      <field name="TEXT">Beware the Jubjub bird, and shun</field>
+                      <field name="TEXT">当心Jubjub鸟，并顺</field>
                     </block>
                   </value>
                   <next>
                     <block type="text_print">
                       <value name="TEXT">
                         <block type="text">
-                          <field name="TEXT">  The frumious Bandersnatch!"</field>
+                          <field name="TEXT"> 该frumious想象猛兽！"</field>
                         </block>
                       </value>
                     </block>
