--- a/demos/storage/index.html
+++ b/demos/storage/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Cloud Storage</title>
+  <title>blockly演示：云存储</title>
   <script src="/storage.js"></script>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
-  <script src="../../msg/js/en.js"></script>
+  <script src="../../msg/js/zh-hans.js"></script>
   <style>
     body {
       background-color: #fff;
@@ -27,24 +27,24 @@
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
     <a href="../index.html">Demos</a> &gt; Cloud Storage</h1>
 
-  <p>This is a simple demo of cloud storage using App Engine.</p>
+  <p>这是一个简单的演示云存储使用的应用程序引擎.</p>
 
   <script>
     if ('BlocklyStorage' in window) {
-      BlocklyStorage.HTTPREQUEST_ERROR = 'There was a problem with the request.\n';
-      BlocklyStorage.LINK_ALERT = 'Share your blocks with this link:\n\n%1';
+      BlocklyStorage.HTTPREQUEST_ERROR = '有一个问题的要求.\n';
+      BlocklyStorage.LINK_ALERT = '与此链接共享您的块:\n\n%1';
       BlocklyStorage.HASH_ERROR = 'Sorry, "%1" doesn\'t correspond with any saved Blockly file.';
-      BlocklyStorage.XML_ERROR = 'Could not load your saved file.\n'+
+      BlocklyStorage.XML_ERROR = '无法加载您的保存的文件.\n'+
           'Perhaps it was created with a different version of Blockly?';
     } else {
-      document.write('<p id="sorry">Sorry, cloud storage is not available.  This demo must be hosted on App Engine.</p>');
+      document.write('<p id="sorry">对不起，云存储是不可用的。此演示必须托管在应用程序引擎.</p>');
     }
   </script>
 
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/cloud-storage">Cloud Storage</a>&hellip;</p>
 
   <p>
-    <button onclick="BlocklyStorage.link()">Save Blocks</button>
+    <button onclick="BlocklyStorage.link()">保存块</button>
   </p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
@@ -84,7 +84,7 @@
         {media: '../../media/',
          toolbox: document.getElementById('toolbox')});
 
-    // An href with #key trigers an AJAX call to retrieve saved blocks.
+    // 与#关键自一个Ajax调用检索保存块href。
     if ('BlocklyStorage' in window && window.location.hash.length > 1) {
       BlocklyStorage.retrieveXml(window.location.hash.substring(1));
     }
