--- a/demos/storage/index.html
+++ b/demos/storage/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Cloud Storage</h1>
+    <a href="../index.html">Demos</a> &gt; 云存储</h1>
 
   <p>这是一个简单的演示云存储使用的应用程序引擎.</p>
 
@@ -41,7 +41,7 @@
     }
   </script>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/cloud-storage">Cloud Storage</a>&hellip;</p>
+  <p>&rarr; 更多的信息 <a href="https://developers.google.com/blockly/installation/cloud-storage">云存储</a>&hellip;</p>
 
   <p>
     <button onclick="BlocklyStorage.link()">保存块</button>
