--- a/demos/storage/index.html
+++ b/demos/storage/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>blockly演示：云存储</title>
-  <script src="/storage.js"></script>
+  <script src="../../appengine/storage.js"></script>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../msg/js/zh-hans.js"></script>
