--- a/demos/accessible/index.html
+++ b/demos/accessible/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Accessible Blockly Demo</title>
+  <title>可访问的模块演示</title>
 
   <!-- Load Blockly -->
   <script src="../../blockly_compressed.js"></script>
@@ -41,9 +41,9 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Accessible Blockly</h1>
+    <a href="../index.html">演示</a> &gt; 无障碍</h1>
 
-  <p>This is a simple demo of a version of Blockly designed for screen readers.</p>
+  <p>这是一个为屏幕阅读器设计的Blockly版本的简单演示.</p>
 
   <!--
   <p>&rarr; More info on <a href="https://developers.google.com/blockly/">accessible Blockly</a>&hellip;</p>
