--- a/demos/fixed/index.html
+++ b/demos/fixed/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Fixed Blockly</title>
+  <title>块地演示：固定块</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../msg/js/en.js"></script>
@@ -19,11 +19,11 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Fixed Blockly</h1>
+    <a href="../index.html">颜色</a> &gt; 固定块</h1>
 
-  <p>This is a simple demo of injecting Blockly into a fixed-sized 'div' element.</p>
+  <p>这是将Blockly注入固定大小的'div'元素的简单演示.</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/injecting-fixed-size">injecting fixed-sized Blockly</a>&hellip;</p>
+  <p>&rarr; 更多信息 <a href="https://developers.google.com/blockly/installation/injecting-fixed-size">injecting fixed-sized Blockly</a>&hellip;</p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
