--- a/demos/headless/index.html
+++ b/demos/headless/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Headless</title>
+  <title>封闭式演示：无头</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../python_compressed.js"></script>
@@ -29,8 +29,8 @@
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
     <a href="../index.html">Demos</a> &gt; Headless</h1>
 
-  <p>This is a simple demo of generating Python code from XML with no graphics.
-  This might be useful for server-side code generation.</p>
+  <p>这是一个简单的演示，从XML生成Python代码，没有图形。
+   这可能对服务器端代码生成很有用.</p>
 
   <table style="width: 100%">
     <tr>
@@ -95,7 +95,7 @@
   </table>
 
   <div style="text-align: center">
-    <button onclick="generate()">Generate Python &#10548;</button>
+    <button onclick="generate()">生成Python &#10548;</button>
   </div>
 
   <script>
