--- a/demos/interpreter/index.html
+++ b/demos/interpreter/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: JS Interpreter</title>
+  <title>封面演示：JS翻译</title>
   <script src="acorn_interpreter.js"></script>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
@@ -21,15 +21,15 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; JS Interpreter</h1>
+    <a href="../index.html">演示</a> &gt; JS 口译员</h1>
 
-  <p>This is a simple demo of executing code with a sandboxed JavaScript interpreter.</p>
+  <p>这是一个使用沙盒JavaScript解释器执行代码的简单演示.</p>
 
-  <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/js-interpreter">JS Interpreter</a>&hellip;</p>
+  <p>&rarr; 更多信息 <a href="https://developers.google.com/blockly/installation/js-interpreter">JS 口译员</a>&hellip;</p>
 
   <p>
-    <button onclick="parseCode()">Parse JavaScript</button>
-    <button onclick="stepCode()" id="stepButton" disabled="disabled">Step JavaScript</button>
+    <button onclick="parseCode()">解析JavaScript</button>
+    <button onclick="stepCode()" id="stepButton" disabled="disabled">步骤JavaScript</button>
   </p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
