--- a/demos/maxBlocks/index.html
+++ b/demos/maxBlocks/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Maximum Block Limit</title>
+  <title>块演示：最大块限制</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../msg/js/en.js"></script>
@@ -22,12 +22,11 @@
 </head>
 <body>
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-    <a href="../index.html">Demos</a> &gt; Maximum Block Limit</h1>
+    <a href="../index.html">Demos</a> &gt; 最大块限制</h1>
 
-  <p>This is a demo of Blockly which has been restricted to a maximum of
-  five blocks.</p>
+  <p>这是Blockly的演示，最多限制在五个街区。.</p>
 
-  <p><b>You have <span id="capacity"></span> block(s) left.</b></p>
+  <p><b>你有 <span id="capacity"></span> block(s) 剩下.</b></p>
 
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
 
