--- a/demos/resizable/index.html
+++ b/demos/resizable/index.html
@@ -33,11 +33,7 @@
     <tr>
       <td>
         <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
-          <a href="../index.html">Demos</a> &gt; Resizable Blockly (Part 1)</h1>
-
-        <p>The first step in creating a resizable Blockly workspace is to use
-        CSS or tables to create an area for it.
-        Next, <a href="overlay.html">inject Blockly</a> over that area.</p>
+          <a href="../index.html">Demos</a> &gt; 可调整大小（第1部分） 创建可调整大小的Blockly工作区的第一步是使用CSS或表创建一个区域。接下来，在区域内注入Blockly。 →更多信息, <a href="overlay.html">inject Blockly</a> over that area.</p>
 
         <p>&rarr; More info on <a href="https://developers.google.com/blockly/installation/injecting-resizable">injecting resizable Blockly</a>&hellip;</p>
       </td>
