--- a/demos/storage/index.html
+++ b/demos/storage/index.html
@@ -27,7 +27,7 @@
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
     <a href="../index.html">Demos</a> &gt; Cloud Storage</h1>
 
-  <p>This is a simple demo of cloud storage using App Engine.</p>
+  <p>这是使用App Engine进行云存储的简单演示.</p>
 
   <script>
     if ('BlocklyStorage' in window) {
