--- a/demos/toolbox/index.html
+++ b/demos/toolbox/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Blockly Demo: Toolbox</title>
+  <title>块式演示：工具箱</title>
   <script src="../../blockly_compressed.js"></script>
   <script src="../../blocks_compressed.js"></script>
   <script src="../../msg/js/en.js"></script>
@@ -21,7 +21,7 @@
   <h1><a href="https://developers.google.com/blockly/">Blockly</a> &gt;
     <a href="../index.html">Demos</a> &gt; Toolbox</h1>
 
-  <p>This is a demo of a complex category structure for the toolbox.</p>
+  <p>这是工具箱的复杂类别结构的演示.</p>
 
   <p>&rarr; More info on the <a href="https://developers.google.com/blockly/installation/toolbox">Toolbox</a>&hellip;</p>
 
